r109 (15. 12. 2022):
Updated code to properly support "A Criminal Carol" event
Implemented a new achievement hooking format which will improve memory efficiency and improve framerate
Assault Delay Tracker: Improved accuracy if playing with difficulty overhaul mods, for example "Crackdown"

r108 (12. 12. 2022):
Meltdown: Fixed a crash related to waypoints

r107 (08. 12. 2022):
Goat Simulator Day 2: Fixed an issue where empty cage increased achievement progress

r106 (06. 12. 2022):
Fixed a crash when waypoints are modified by other HUD

r105 (05. 12. 2022):
Fixed syncing with other EHI players

r104 (04. 12. 2022):
Midland Ranch: Fixed a crash
Fixed a crash at "GetElementTimer()"

r103 (03. 12. 2022):
Golden Grin Casino: Fixed a load crash

r102 (02. 12. 2022):
Fixed a menu crash related to DigitalGui

r101 (01. 12. 2022):
Reworked buff "Forced Friendship (Absorption)" to show value and not percentage
Fixed compatibility with "More Weapon Stats" mod

r100 (29. 11. 2022):
Added Czech translation
Fixed an issue where Assault Delay tracker is not visible if enabled on certain heists
Fixed an issue where Tag Team Effect (Tagged) buffs are marked as "bad"

r99 (14. 11. 2022):
Stamina Buff: Fixed a crash at spawn

r98 (13. 11. 2022):
Added Stamina buff
Fixed an issue where trackers are preloaded for Sentry Gun equipment
Fixed an issue where trackers for SWAT Van Turret are not preloaded properly on client

r97 (11. 11. 2022):
Improved performance by preloading trackers for SWAT Van Turret and Zipline units
Zipline: Fixed an issue where total time is inaccurate after a bag is "eaten" by ElementAreaTrigger

r96 (06. 11. 2022):
Boiling Point: Fixed info not appearing
Firestarter Day 2: Fixed server loot objective not counting in Loot Counter
Waypoints: Fixed a crash at load if custom icon is defined and unit is active (drop-in)

r95 (05. 11. 2022):
Election Day 2: Fixed an issue with maximum amount in Loot Counter