@@ -421,6 +421,8 @@
     "ehi_buffs_skills_fugitive_brawler_subclass" : "Brawler",
     "ehi_buffs_skills_fugitive_bloodthirst" : "Bloodthirst",
     "ehi_buffs_skills_fugitive_bloodthirst_reload" : "Bloodthirst (Nabití zbraně)",
+    "ehi_buffs_skills_fugitive_bloodthirst_ratio" : "Poměr Bloodthirst",
+    "ehi_buffs_skills_fugitive_bloodthirst_ratio_desc" : "Nastavuje procentuální poměr k zobrazení skillu Bloodthirst\nNastavením hodnoty na 0 % bude buff vždycky viditelný\n\nVýchozí hodnota je 34 %, což je 6 zabití v nemódované hře",
     "ehi_buffs_skills_fugitive_berserker" : "Berserker",
     "ehi_buffs_skills_fugitive_berserker_refresh" : "Berserker Refresh",
     "ehi_buffs_skills_fugitive_berserker_refresh_desc" : "Nastavuje jak často se má buff aktualizovat za sekundu",
