@@ -41,7 +41,7 @@
             "id": "ehi_buffs_skills_fugitive_menu",
             "title": "ehi_buffs_skills_fugitive_menu",
             "next_menu": "ehi_buffs_skills_fugitive_menu",
-            "ehi_ver" : 79
+            "ehi_ver" : 110
         }
     ]
 }
